After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 691098 - v4l2src: breaks because of changed ioctl error return code from driver on failed control query in 3.8-rc1
v4l2src: breaks because of changed ioctl error return code from driver on fai...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal critical
: 1.0.5
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-01-03 22:23 UTC by Robert Krakora
Modified: 2013-01-04 15:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
v4l2src plugin patch to comply with new ENOENT return value of failed control query... (209 bytes, patch)
2013-01-03 22:23 UTC, Robert Krakora
committed Details | Review

Description Robert Krakora 2013-01-03 22:23:37 UTC
Created attachment 232687 [details] [review]
v4l2src plugin patch to comply with new ENOENT return value of failed control query...

v4l2 latest from Git breaks v4l2src plugin because of changed return value on failed control query...SEE ATTACHED PATCH against Git of gst-plugins-good 1.x branch.  This also applies to the latest gst-plugins-good 0.10 branch.
Comment 1 Sebastian Dröge (slomo) 2013-01-04 09:04:45 UTC
commit ad2f74afbc145e293b99bcffe5f32050b3b795b3
Author: Robert Krakora <rob.krakora@messagenetsystems.com>
Date:   Fri Jan 4 10:03:32 2013 +0100

    v4l2: Also handle the new ENOENT return value of VIDIOC_QUERYCTRL
    
    https://bugzilla.gnome.org/show_bug.cgi?id=691098
Comment 2 Tim-Philipp Müller 2013-01-04 11:37:40 UTC
https://lkml.org/lkml/2012/12/23/75
Comment 3 Tim-Philipp Müller 2013-01-04 14:36:12 UTC
Should we really be working around a kernel bug that only existed for a short time in an unstable kernel release candidate?
Comment 4 Sebastian Dröge (slomo) 2013-01-04 14:38:15 UTC
IMHO no, let's revert it then?
Comment 5 Robert Krakora 2013-01-04 15:32:41 UTC
Sorry to cry "Wolf" guys...it did not seem right that ENOENT was being returned by v4l2 on a control query though...;-)