v4l2: Also handle the new ENOENT return value of VIDIOC_QUERYCTRL

https://bugzilla.gnome.org/show_bug.cgi?id=691098